--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -455,6 +455,7 @@
     },
     "defaults": {
       "menuHint": "Export, preferences, and more...",
+      "center_heading": "Diagrams. Made. Simple.",
       "toolbarHint": "Pick a tool & Start drawing!",
       "helpHint": "Shortcuts & help"
     }
